fix: load more button visibility and load more click

--- a/src/css/search-img.css
+++ b/src/css/search-img.css
@@ -175,3 +175,7 @@
 span {
   font-weight: 500;
 }
+
+.is-hidden {
+  display: none;
+}
